@@ -97,6 +97,7 @@ TTree* ZeroLeptonCRWT::bookTree(const std::string& treename)
   bookNTVars(tree,m_ntv,false);
   bookNTReclusteringVars(tree,m_RTntv);
   bookNTCRWTVars(tree,m_crwtntv);
+  bookNTExtraVars(tree,m_extrantv);
   return tree;
 }
 
@@ -531,6 +532,45 @@ bool ZeroLeptonCRWT::processEvent(xAOD::TEvent& event)
   //if (nonISR_jets.size()>=2) mT2_noISR = m_proxyUtils.MT2(nonISR_jets,missingETPrime); 
   //out() << " mT2 " << mT2 << " " << mT2_noISR << std::endl; 
 
+  //Super Razor variables
+  double gaminvRp1 =-999;
+  double shatR =-999;
+  double mdeltaR =-999;
+  double cosptR =-999;
+  double Minv2 =-999;
+  double Einv =-999;
+  double  gamma_R=-999;
+  double dphi_BETA_R =-999; 
+  double dphi_leg1_leg2 =-999; 
+  double costhetaR =-999;
+  double dphi_BETA_Rp1_BETA_R=-999;
+  double gamma_Rp1=-999;
+  double Eleg1=-999;
+  double Eleg2=-999; 
+  double costhetaRp1=-999;
+  m_proxyUtils.RazorVariables(good_jets, 
+			      missingET->X(),
+			      missingET->Y(),
+			      gaminvRp1 ,
+			      shatR ,
+			      mdeltaR ,
+			      cosptR ,
+			      Minv2 ,
+			      Einv ,
+			      gamma_R,
+			      dphi_BETA_R , 
+			      dphi_leg1_leg2 , 
+			      costhetaR ,
+			      dphi_BETA_Rp1_BETA_R,
+			      gamma_Rp1,
+			      Eleg1,
+			      Eleg2, 
+			      costhetaRp1);
+
+  double Sp,ST,Ap=-1;
+  m_proxyUtils.ComputeSphericity(good_jets, Sp,ST,Ap);
+
+
   if(m_doSmallNtuple) { 
     unsigned int runnum = RunNumber;
     if ( ! m_IsData ) runnum = mc_channel_number;
@@ -554,6 +594,7 @@ bool ZeroLeptonCRWT::processEvent(xAOD::TEvent& event)
       m_proxyUtils.FillNTReclusteringVars(m_RTntv, good_jets);
     }
     FillCRWTVars(m_crwtntv,leptonTLV,*missingET,leptonCharge);
+    m_proxyUtils.FillNTExtraVars(m_extrantv, MET_Track, MET_Track_phi, mT2,mT2_noISR,gaminvRp1 ,shatR ,mdeltaR ,cosptR ,gamma_R,dphi_BETA_R , dphi_leg1_leg2 , costhetaR ,dphi_BETA_Rp1_BETA_R,gamma_Rp1,costhetaRp1,Ap);
 
     m_tree->Fill();
   }
